--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="App desenvolvido na Semana Sprint React!"
+      content="App desenvolvido na Semana Spring React!"
     />
     <title>DSVendas</title>
   </head>
